<resources>
    <string name="app_name">Rxjava2-operators</string>
    <string name="reactivex">ReactiveX</string>
    <string name="observable_creating">Creating</string>
    <string name="observable_transforming">Transforming</string>
    <string name="observable_filtering">Filtering</string>
    <string name="observable_combining">Combining</string>
    <string name="observable_conditional">Conditional</string>
    <string name="button_run">Run</string>
    <string name="dialog_message">Emitted items from %1$s operator sample are printing to the logcat</string>
    <string name="button_why_rx">why rx</string>
    <string name="source">source</string>
    <string name="operators">operators</string>
    <string name="samples">samples</string>
    <string name="event_counter">Event counter</string>
    <string name="taps">%d Taps</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="type_here">Type here</string>
    <string name="user_is_typing">User is typing</string>
    <string name="search_here">Search here</string>
    <string name="search_for">Search for :</string>
    <string name="stop">STOP</string>
    <string name="blink">Blink</string>
    <string name="blink_1">Blink 5 times with interval of 2 seconds</string>
    <string name="blink_2">Purple blinks once and after 3 seconds orange blinks</string>
</resources>
